--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://2914a573-dbdf-43dd-90cb-561364cbf9ee.preview.emergentagent.com
 WDS_SOCKET_PORT=443
