--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,8 @@ pyjwt>=2.10.1
 passlib>=1.7.4
 tzdata>=2024.2
 motor==3.3.1
+certifi>=2024.0.0
+pymongo[srv]>=4.5.0
 pytest>=8.0.0
 black>=24.1.1
 isort>=5.13.2
