Fix Dockerfile to use Railway PORT environment variable

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,4 +23,4 @@ ENV REQUESTS_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt
 EXPOSE 8000
 
 # Run the application
-CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD uvicorn server:app --host 0.0.0.0 --port ${PORT:-8000}
